--- a/sty/reviewmacro.sty
+++ b/sty/reviewmacro.sty
@@ -1,3 +1,9 @@
+%% 強制的に長い文字列を折り返すために使うパッケージ
+\usepackage{seqsplit}
+
+%% from review-pdfmaker
+\usepackage{fancyhdr}
+
 % Re:VIEW 2互換のlayout.tex.erb記載相当の内容
 \RequirePackage{review-base}
 
